# otsify

./: Cargo.toml  README.md  build.sh
src/: cli.rs  img.rs  main.rs
